[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "loop_opt"
author = "Adrian Sampson"
author-email = "asampson@cs.cornell.edu"
home-page = "https://github.com/sampsyo/bril"
requires-python = ">=3.4"
requires = [
    "lark-parser >=0.7.4",
]

[tool.flit.scripts]
loopReduce = "loop_opt:loop_opt"
