[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "brench"
author = "Adrian Sampson"
author-email = "asampson@cs.cornell.edu"
home-page = "https://github.com/sampsyo/bril"
requires-python = ">=3.4"
requires = [
    "click",
    "tomlkit",
]

[tool.flit.scripts]
brench = "brench:brench"
