[package]
name = "bril-rs"
version = "0.1.0"
authors = ["Patrick LaFontaine <32135464+Pat-Lafon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["full", "visit", "fold", "extra-traits", "printing"] }
quote = "1.0"
lazy_static = "1.4.0"

[features]
float = []
memory = []
ssa = []
speculate = []
algebraic = []
