[package]
name = "bril-rs"
version = "0.1.0"
authors = ["Patrick LaFontaine <32135464+Pat-Lafon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# trick to enable all features in test
bril-rs = { path = ".", features = ["memory", "float", "ssa", "speculate"] }

[features]
float = []
memory = []
ssa = []
speculate = []
