[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "vriltxt"
author = "Adrian Sampson, HCP, SA and TT"
author-email = "asampson@cs.cornell.edu"
home-page = "https://github.com/sampsyo/bril and https://github.com/sampsyo/vril"
requires-python = ">=3.4"
requires = [
    "lark-parser",
]

[tool.flit.scripts]
vril2txt = "vriltxt:vril2txt"
vril2json = "vriltxt:vril2json"
