[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "briltxt"
author = "Adrian Sampson"
author-email = "asampson@cs.cornell.edu"
home-page = "https://github.com/sampsyo/bril"
requires-python = ">=3.4"
requires = [
    "lark-parser >=0.7.4",
]

[tool.flit.scripts]
bril2txt = "briltxt:bril2txt"
bril2json = "briltxt:bril2json"
