[package]
name = "brilift"
version = "0.1.0"
edition = "2024"

[dependencies]
cranelift-codegen = { version = "0.125.3", features = ["all-arch"] }
cranelift-frontend = "0.125.3"
cranelift-object = "0.125.3"
cranelift-module = "0.125.3"
cranelift-native = "0.125.3"
cranelift-jit = "0.125.3"
argh = "^0.1.12"
simplelog = "^0.12.2"
enum-map = "^2.7.3"
bril-rs = { path = "../bril-rs", features = [
    "memory",
    "float",
    "ssa",
    "speculate",
    "position",
    "import",
    "char",
] }
