[package]
name = "flat-bril"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.37"
memmap2 = "0.9.5"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
zerocopy = {version = "0.8.25", features = ["derive"]}
