[package]
name = "bril2json"
version = "0.1.0"
authors = ["Patrick LaFontaine <32135464+Pat-Lafon@users.noreply.github.com>"]
edition = "2021"
description = "A rust parser of the Bril language text representation"
readme = "README.md"
repository = "https://github.com/sampsyo/bril"
# license = "MIT"
license-file = "../../LICENSE"
categories = ["command-line-utilities", "compilers", "parser-implementations"]
keywords = ["compiler", "bril", "parser", "data-structures", "language"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap         = { version = "3.2", features = ["derive"] }
lalrpop-util = { version = "0.19", features = ["lexer"] }
regex = "1.5"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.19"

[dependencies.bril-rs]
version = "0.1.0"
path = "../../bril-rs"
features = ["ssa", "memory", "float", "speculate", "position", "import"]