[package]
name = "brild"
version = "0.1.0"
edition = "2021"
description = "A rust linker of Bril programs"
readme = "README.md"
repository = "https://github.com/sampsyo/bril"
# license = "MIT"
license-file = "../../LICENSE"
categories = ["command-line-utilities", "compilers"]
keywords = ["compiler", "bril", "parser", "data-structures", "language"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap         = { version = "3.2", features = ["derive"] }

[dependencies.bril2json]
version      = "0.1.0"
path         = "../bril2json"

[dependencies.bril-rs]
version = "0.1.0"
path = ".."
features = ["ssa", "memory", "float", "speculate", "position", "import"]