workspace = { members = ["runtime"] }
[package]
name = "brillvm"
version = "0.1.0"
authors = ["Patrick LaFontaine <32135464+Pat-Lafon@users.noreply.github.com>"]
edition = "2021"
description = "A compiler for Bril into LLVM IR"
readme = "README.md"
repository = "https://github.com/uwplse/bril"
# license = "MIT"
license-file = "../../LICENSE"
categories = ["command-line-utilities", "compilers"]
keywords = ["compiler", "bril", "parser", "data-structures", "language"]
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
inkwell = { git = "https://github.com/TheDan64/inkwell.git", features = [
    "llvm18-0",
], rev = "6c0fb56b3554e939f9ca61b465043d6a84fb7b95" }

# TODO: Remove rev when https://github.com/uwplse/bril/pull/6 merges
bril-rs = { git = "https://github.com/uwplse/bril", rev="40ec0e5803c69bc2cde794785ba6b13a4fc401fe", features = ["float", "ssa", "memory"] }


# Need to set a default `main` to build `rt` bin
[[bin]]
name = "main"
path = "src/main.rs"

# To properly set up the rt library for linking with LLVM
[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
