[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc-print = "0.1"

# To properly set up the rt library for linking with LLVM
[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true